Fix bleeding css components

--- a/src/ErrorPage/ErrorPage.css
+++ b/src/ErrorPage/ErrorPage.css
@@ -16,7 +16,7 @@
   height: 5rem;
 }
 
-.back-button {
+.error-back-button {
   align-items: center;
   background-color: #21262D;
   border: 1px solid #30363D;
