--- a/src/RocketDetails/RocketDetails.css
+++ b/src/RocketDetails/RocketDetails.css
@@ -37,6 +37,10 @@
   margin-bottom: 0;
 }
 
+.start-date {
+  margin-bottom: 0;
+}
+
 @media only screen and (min-width: 800px) {
   .rocket-details {
     grid-template-columns: 1fr 1fr;
